--- a/introduction.html
+++ b/introduction.html
@@ -212,15 +212,15 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul>
 <p>Thanks to our smartphone dominated society, anonymised mobility information stemming from cellular infrastructure permits to have access of detailed knowledge about people, things, and events.</p>
 <p>With the help of sensors and online networks, <em>human mobility</em> studies can be applied on many different situations and permits to have access of detailed knowledge about people and locations. Human mobility is the underlying social dynamics of population and is key to understand the intersection between location and human movements.</p>
-<p><em>Human mobility analytics</em> refers to quantifying and studying people’ s movements. It allows ways to understand not only the “where” but the “how” behind human mobility behaviour is provides an analytical framework for operational or strategic decisions. A range of metrics con be measured, as for example:</p>
+<p><em>Human mobility analytics</em> refers to quantifying and studying people’ s movements. It allows ways to understand not only the “where” but the “how” behind human mobility behaviour is provides an analytical framework for operational or strategic decisions. A range of queries can be addressed, as for example:</p>
 <ul>
-<li>How many people visit a shopping centre</li>
-<li>How frequently repeat visitors visit a store</li>
-<li>The average time visitors spend in a shopping centre</li>
-<li>Where do visitors come from</li>
-<li>What is the visit frequency of visitors</li>
-<li>What is the profile of visitors by age</li>
-<li>What are the most visited places in a shopping centre or a street segment</li>
+<!-- <li>How many people visit a shopping centre?</li> -->
+<li>How frequently repeat visitors visit a store?</li>
+<li>The average time visitors spend in a shopping centre?</li>
+<li>Where do visitors come from?</li>
+<li>What is the visit frequency of visitors?</li>
+<li>What is the profile of visitors by age?</li>
+<li>What are the most visited places in a shopping centre or a street segment?</li>
 </ul>
 <p>To understand these metrics, we rely on big datasets that catch the physical environment of people within a catchment area. In this book, we apply data provided by a major bigdata service in the United Kingdom, <em>Visitor Insights</em>.</p>
 <div id="location-technologies" class="section level2">
